name:                central2
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          nomura_y@welmo.co.jp
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable central2
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -fno-warn-unused-do-bind
  default-extensions:  OverloadedStrings
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                     , aeson
                     , HDBC
                     , HDBC-session
                     , HDBC-postgresql
                     , names-th
                     , persistable-record
                     , relational-query
                     , relational-query-HDBC
                     , relational-schemas
                     , scotty
                     , sql-words
                     , text
                     , time
                     , transformers
                     , yaml
