name:                central2
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          nomura_y@welmo.co.jp
-- copyright:           
-- category:            
build-type:          Custom
-- extra-source-files:  
cabal-version:       >=1.10

executable central2
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -fno-warn-unused-do-bind
  default-extensions:  OverloadedStrings
  build-depends:       base ==4.*
                     , aeson
                     , HDBC
                     , HDBC-mysql
                     , HDBC-session
                     , HDBC-postgresql
                     , mtl
                     , names-th
                     , persistable-record
                     , relational-mysql
                     , relational-query
                     , relational-query-HDBC
                     , relational-schemas
                     , scotty
                     , scotty-binding-play
                     , sql-words
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , wai-extra
                     , yaml

executable createtable
  default-language:    Haskell2010
  hs-source-dirs:      createtable
  main-is:             Main.hs
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  build-depends:       base ==4.*
                     , heredoc
