name:                centralserver
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          nomura_y@welmo.co.jp
-- copyright:           
-- category:            
build-type:          Custom
-- extra-source-files:  
cabal-version:       >=1.10

executable centralserver
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -fno-warn-unused-do-bind
  default-extensions:  OverloadedStrings
  build-depends:       base ==4.*
                     , aeson
                     , bifunctors
                     , containers
                     , HDBC
                     , HDBC-mysql
                     , HDBC-session
                     , mtl
                     , names-th
                     , persistable-record
                     , relational-mysql
                     , relational-query
                     , relational-query-HDBC
                     , relational-schemas
                     , safe
                     , scotty
                     , scotty-binding-play
                     , sql-words
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , unix-time
                     , wai-extra
                     , yaml

executable createtable
  default-language:    Haskell2010
  hs-source-dirs:      createtable
  main-is:             Main.hs
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  build-depends:       base ==4.*
                     , here
