name:                exam1
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          nomura_y@welmo.co.jp
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable exam1
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind -rtsopts
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , io-streams
                     , attoparsec
                     , transformers
                     , mtl
                     , containers
  default-language:    Haskell2010
